# epalea

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: protect_pretrained.yml  publish.yml
docs/api/: authentication.md  errors.md  live-testing.md  overview.md  rate-limits.md
docs/api/endpoints/: evaluate.md  infer.md  models.md
docs/changelog/: index.md
docs/cli/: batch-infer.md  evaluate.md  generate-data.md  index.md  infer.md  models.md  overview.md  train-aggregator.md  train-full.md  train.md
docs/concepts/: evidence-index.md  inference-modes.md  pipeline.md  schema.md  uncertainty.md
docs/contributing/: overview.md
docs/domains/: compliance.md  overview.md
docs/getting-started/: custom-domain.md  installation.md  key-concepts.md  quickstart.md  tutorial.md
docs/intro/: index.md
docs/notebooks/: environment.md
docs/research/: index.md
epalea/: __init__.py  _config.py  _inference.py  _model.py  _prereqs.py  cli.py
epalea/core/: __init__.py  canonical_db.py  evidence_index.py  factor_converter.py  orchestrator.py  provenance_ledger.py
epalea/data/: __init__.py  generate.py  synthetic_data.py
epalea/evaluation/: __init__.py  metrics.py
epalea/models/: __init__.py  decoder_network.py  learned_aggregator.py  schema.py  spn_module.py  vae_encoder.py
epalea/training/: __init__.py  train_generic_lpf.py
notebooks/: 01_quickstart.ipynb  02_training.ipynb  03_inference.ipynb
postman/: epalea_api_v1.json
user_workspace/configs/: evaluate.yaml  index.yaml  infer.yaml  train.yaml  train_aggregator.yaml  train_full.yaml
user_workspace/configs_o/: evaluate.yaml  index.yaml  infer.yaml  train.yaml  train_aggregator.yaml  train_full.yaml
(+1 files in other folders)
