[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epalea"
version = "1.0.1"
description = "Latent Factor Posteriors — evidential probabilistic inference"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Epalea Team", email = "team@epalea.ai" }
]
keywords = ["probabilistic-inference", "bayesian", "uncertainty", "spn", "vae"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "jsonlines>=3.1.0",
    "typer>=0.9.0",
    "typing-extensions>=4.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://epalea.ai"
Documentation = "https://epalea.ai/docs"
Repository = "https://github.com/epalea/epalea"
"Bug Tracker" = "https://github.com/epalea/epalea/issues"

[project.scripts]
epalea = "epalea.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["epalea*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
